--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -30,10 +31,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "postcss": "^8.5.4",
     "prisma": "^6.8.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.2",
     "typescript": "^5"
   }
