--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^3.3.0",
     "youtube-search-api": "^1.2.2",
     "zod": "^3.25.42"
