--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "youtube-search-api": "^1.2.2",
     "zod": "^3.25.42"
@@ -33,8 +36,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
