--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
     "react-youtube": "^10.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "youtube-search-api": "^1.2.2",
     "zod": "^3.25.42"
